@@ -1,6 +1,7 @@
 Changes in QMPlay2 build 15.11.29:
     - improve QOpenGLWidget performance (Qt5 only, not used by default),
     - support for HEVC decoding in VDPAU,
+    - removed console for Windows,
     - fix decoding BINK Video,
 
 Changes in QMPlay2 build 15.10.18:
